[gd_scene load_steps=13 format=3 uid="uid://eaav3ecflsay"]

[ext_resource type="Script" path="res://Scenes/melee.gd" id="1_ri4x4"]
[ext_resource type="Texture2D" uid="uid://cmma0ykixjuie" path="res://2DAssets/Knight/pixil-frame-0.png" id="2_4vtc6"]
[ext_resource type="Texture2D" uid="uid://gs5grrgkk2kq" path="res://2DAssets/pixil-frame-0(1).png" id="3_5qe5b"]
[ext_resource type="Texture2D" uid="uid://bpwix10idum20" path="res://2DAssets/Knight/pixil-frame-1.png" id="3_v76po"]
[ext_resource type="Texture2D" uid="uid://k3m3i451u4xx" path="res://2DAssets/Knight/pixil-frame-2.png" id="4_g5sg3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1ccui"]

[sub_resource type="SpriteFrames" id="SpriteFrames_lf1d7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_v76po")
}],
"loop": true,
"name": &"Attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_g5sg3")
}, {
"duration": 1.0,
"texture": ExtResource("3_v76po")
}],
"loop": true,
"name": &"Idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_4vtc6")
}, {
"duration": 1.0,
"texture": ExtResource("3_v76po")
}, {
"duration": 1.0,
"texture": ExtResource("4_g5sg3")
}],
"loop": true,
"name": &"Walking",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_sw471"]
resource_name = "Attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatableBody2D/Sword:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.266667, 0.6, 0.766667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(121, 340), Vector2(145, 340), Vector2(163, 340), Vector2(121, 340), Vector2(121, 340)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatableBody2D/Sword:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.266667, 0.6, 0.766667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [-2.0212, -4.72127, -4.72127, 2.1293, -2.0212]
}

[sub_resource type="Animation" id="Animation_jadui"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatableBody2D/Sword:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(121, 340)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatableBody2D/Sword:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-2.0212]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ifgg2"]
_data = {
"Attack": SubResource("Animation_sw471"),
"RESET": SubResource("Animation_jadui")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hm4fa"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_rolmh"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1

[node name="Melee" type="CharacterBody2D" groups=["pawns"]]
position = Vector2(128, 333)
script = ExtResource("1_ri4x4")

[node name="AttackRange" type="Area2D" parent="."]
scale = Vector2(13, 13)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource("CircleShape2D_1ccui")

[node name="CharacterSprite" type="AnimatedSprite2D" parent="."]
z_index = 5
position = Vector2(4, -3)
scale = Vector2(0.024358, 0.024358)
sprite_frames = SubResource("SpriteFrames_lf1d7")
animation = &"Attack"
frame_progress = 0.753287

[node name="AnimatableBody2D" type="AnimationPlayer" parent="CharacterSprite"]
libraries = {
"": SubResource("AnimationLibrary_ifgg2")
}

[node name="Sword" type="Sprite2D" parent="CharacterSprite/AnimatableBody2D"]
z_index = 5
position = Vector2(121, 340)
rotation = -2.0212
scale = Vector2(0.024358, 0.024358)
texture = ExtResource("3_5qe5b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_hm4fa")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
debug_enabled = true

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_rolmh")

[connection signal="body_entered" from="AttackRange" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_detection_area_body_exited"]
